--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>julu developer porfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">                            
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top.jpg">
+        <div class="half-width">
+            <h1>welcome to </h1>
+            <h1><span class="orange-color">julekha islam julu</span> world</h1>
+            <h3>merging documents for mailing.</h3>
+            <p>creating a main document.creating a data source. adding merge fields and merging documents.generating mailing labels.creating a main document.creating a data source. adding merge fields and merging documentscreating a main document.creating a data source. adding merge fields and merging documents..</p>
+            <a class="link-button" target="blank" href="https://linkedin.com/company/programminghero">here me</a>
+         </div>
+        <div class="half-width">
+        <img src="Anime Girl.jpg" alt="">
+         </div>
+        </section>
 </body>
 </html>
