--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top.jpg">
+    <section class="welcome to">
         <div class="half-width">
             <h1>welcome to </h1>
             <h1><span class="orange-color">julekha islam julu</span> world</h1>
@@ -22,4 +22,17 @@
         <img src="Anime Girl.jpg" alt="">
          </div>
         </section>
+        <section class="dream-big">
+            <div class="half-width">
+                <img src="MiSSABAYA.jpg"  alt="">
+            </div>
+            <div class="half-width">
+                <h1>dream big</h1>
+                <h2>become aweb developer</h2>
+                <p>we say cheaper than but not expensive than because the adjective cheap has only one syllable whilst the adjective has three syllable expensive for adjective of one syllable like cheap long short etc.we say cheap cheaper then syllable .</p>
+            <a class="link-button" target="blank" href="https://linkedin.com/company/programminghero">download resume</a>
+            
+            </div>
+        </section>
+        </body>
 </html>
