style border and added footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="welcome to">
+    <section class="welcome to flexible-container">
         <div class="half-width">
             <h1>welcome to </h1>
             <h1><span class="orange-color">julekha islam julu</span> world</h1>
@@ -22,7 +22,7 @@
         <img src="Anime Girl.jpg" alt="">
          </div>
         </section>
-        <section class="dream-big">
+        <section class="dream-big flexible-container">
             <div class="half-width">
                 <img src="MiSSABAYA.jpg"  alt="">
             </div>
@@ -34,5 +34,23 @@
             
             </div>
         </section>
+        <section class="experience-area">
+            <h1>experiences</h1>
+            <div class="flexible-container">
+                <div class="experience-item">
+                    <h2>full stack developer </h2>
+                    <h3 class="orange-color"> 2024 present| pro level developer</h3>
+                    <p>there isnot anybody here but some body in the corridor he doesnot have the same colour hair as i have his a different colour.their heads are moving up and down master zamals tie is grey we call this a map learning english grammer is easy spanish is difficult.</p>
+                </div>
+            <div class="experience-item">
+                <h2>baby web developer </h2>
+                <h3 class="orange-color">2022-2024 hero learner</h3>
+                <p>there isnot anybody here but some body in the corridor he doesnot have the same colour hair as i have his a different colour.their heads are moving up and down master zamals tie is grey we call this a map learning english grammer is easy spanish is difficult</p>
+            </div>
+            </div>
+        </section>
         </body>
+        <footer>
+            <p>@ peter parker 2023,a programming hero initive.</p>
+        </footer>
 </html>
